# astro-git-cms

./: .gitignore  404.html  README.md  astro.config.ts  cms.config.example.json  index.html  package.json  rss.xml  sitemap-0.xml  sitemap-index.xml  tsconfig.json  vite.config.admin.ts
.forgejo/workflows/: deploy.yml  newsletter.yml
_astro/: _id_.BKjE9a6F.css  index.astro_astro_type_script_index_0_lang.hFeFaX3w.js  index.irYs3Gug.css
about/: index.html
admin/: index.html
admin/public/: manifest.webmanifest  sw.js
blogroll/: index.html
desktop/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
desktop/src/: App.tsx  Editor.tsx  app.css  backend.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: lib.rs  main.rs
notes/: index.html  rss.xml
notes/2026-07-01-first-note/: index.html
notes/2026-07-02-second-note/: index.html
pictures/: index.html
pictures/2026-07-01-morning-light/: index.html
pictures/2026-07-02-evening-walk/: index.html
posts/: index.html
posts/hello-world/: index.html
public/: robots.txt
scripts/: deploy.sh  send-newsletter.ts
src/: content.config.ts
src/admin/: admin.css  config.ts  crosspost.ts  forgejo.ts  git.ts  main.ts  paste.ts  schema.ts  standalone.ts  store.ts  ui.ts
src/components/: Analytics.astro  Comments.astro  NewsletterSignup.astro
src/config/: site.ts
src/layouts/: Base.astro
src/lib/: content.ts  frontmatter.ts  rehype-base.ts  (+2 more)
tests/: frontmatter.test.ts  paste.test.ts  schema.test.ts  slug.test.ts
(+23 files in other folders)
