[package]
name = "writer-desktop"
version = "0.1.0"
description = "Offline-first desktop writing app for git-based sites"
edition = "2021"

[lib]
name = "writer_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
git2 = "0.20"
