[package]
name = "writer-desktop"
version = "0.1.0"
description = "Offline-first desktop writing app for git-based sites"
edition = "2021"

[lib]
name = "writer_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Self-contained git over HTTPS. We drop git2's default SSH feature (which
# pulls libssh2-sys) and build both libgit2 and OpenSSL from vendored source,
# so the app compiles with just a C toolchain + perl — no system libgit2 /
# OpenSSL and no pkg-config, which macOS does not ship. Pushing authenticates
# through the git credential helper (e.g. `gh auth login`), so no token is
# stored by the app.
git2 = { version = "0.20", default-features = false, features = [
    "https",
    "vendored-libgit2",
    "vendored-openssl",
] }
